First working refactored version